# EDGITOR

./: .gitignore  CMakeLists.txt  EDGITOR.sln  EDGITOR.vcxproj  EDGITOR.vcxproj.filters  FUNCTIONS.h  README.md  SDL_FontCache.cpp  SDL_FontCache.h  VARIABLES.h  main.cpp  packages.config
src/: BRUSH.cpp  BRUSH.h  CANVAS.cpp  CANVAS.h  COLOR.cpp  COLOR.h  FUNCTIONS.h  RECT.cpp  RECT.h  SDL_FontCache.cpp  SDL_FontCache.h  SUPERSTACK.h  SYSTEM.cpp  SYSTEM.h  UI_CONTROL.cpp  UI_CONTROL.h  UNDO.cpp  UNDO.h  UPDATE_CONTROL.h  VARIABLES.cpp  VARIABLES.h  main.cpp
x64/Debug/: EDGITOR.ilk  EDGITOR.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/EDGITOR.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  EDGITOR.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: EDGITOR.iobj  EDGITOR.ipdb  EDGITOR.vcxproj.FileListAbsolute.txt  main.nativecodeanalysis.sarif
x64/Release/EDGITOR.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  EDGITOR.lastbuildstate  EDGITOR.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
